--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m10_auto_pistol.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m10_auto_pistol.yml
@@ -8,6 +8,10 @@
     tags:
     - Sidearm
     - RMCWeaponPistolM13
+  - type: Gun
+    selectedMode: FullAuto
+    availableModes:
+    - FullAuto
   - type: RMCSelectiveFire
     scatterWielded: 12
     scatterUnwielded: 13
