add: M13 has a specific holster sprite

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
@@ -1131,18 +1131,23 @@
   parent: CMBeltMarine
   id: RMCBeltHolsterM13
   name: M276 pattern M13 holster rig
-  description: Special issue variant of the M276 designed to holster the M13 automatic pistol and 8 spare mags.
+  description: Special issue variant of the M276 designed to holster a M13 automatic pistol and 8 spare mags.
   components:
   - type: Sprite
-    sprite: _RMC14/Objects/Clothing/Belt/holster_smg.rsi
+    sprite: _RMC14/Objects/Clothing/Belt/holster_autopistol.rsi
     layers:
     - state: icon
     - sprite: _RMC14/Objects/Weapons/Guns/gun_underlays.rsi
       state: m13
-      map: [ "enum.CMItemSlotsLayers.Fill" ] # This one's fine to use the CMItemSlots visualizer
+      map: [ "enum.CMHolsterLayers.Fill" ]
+      offset: -0.34375, -0.15625
       visible: false
+    - state: half
+      map: [ "openLayer" ]
+    - state: full
+      map: [ "closedLayer" ]
   - type: Clothing
-    sprite: _RMC14/Objects/Clothing/Belt/holster_smg.rsi
+    sprite: _RMC14/Objects/Clothing/Belt/holster_autopistol.rsi
     slots:
     - suitStorage
     - belt
