--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m10_auto_pistol.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m10_auto_pistol.yml
@@ -9,10 +9,17 @@
     - Sidearm
     - RMCWeaponPistolM13
   - type: RMCSelectiveFire
-    scatterWielded: 12
-    scatterUnwielded: 13
+    scatterWielded: 14
+    scatterUnwielded: 16
     baseFireRate: 10
     burstScatterMult: 4
+    modifiers:
+      FullAuto:
+        maxScatterModifier: 8
+        useBurstScatterMult: true
+        unwieldedScatterMultiplier: 3
+        shotsToMaxScatter: 50
+
     baseFireModes:
     - FullAuto
   - type: Sprite
