--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
@@ -1,7 +1,7 @@
 ﻿- type: job
   parent: CMJobBase
   id: RMCSPPLeader
-  name: RMCSPPLeader
+  name: rmc-job-name-spp-leader
   description: rmc-job-description-spp-leader
   playTimeTracker: CMJobSPPLeader
   ranks:
@@ -46,9 +46,9 @@
 
 - type: entity
   parent: MarkerBase
-  id: RMCRandomHumanoidSPPLeader
+  id: RMCRandomHumanoidSPPLeaderHostile
   name: spp ghost role leader
-  suffix: Spawner, Player
+  suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
     layers:
@@ -56,19 +56,47 @@
   - type: RandomHumanoidSpawner
     settings: RMCSPPLeader
 
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidSPPLeaderFriendly
+  name: spp ghost role leader
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: RMCSPPLeaderFriendly
+
 - type: randomHumanoidSettings
   parent: EventHumanoid
   id: RMCSPPLeader
   components:
   - type: GhostRole
-    name: RMCSPPLeader
-    description: rmc-job-description-spp-leader
+    name: rmc-ghost-name-spp-hostile-leader
+    description: rmc-ghost-role-information-spp-hostile-description
     rules: rmc-ghost-role-information-spp-rules
     reregister: false
     job: RMCSPPLeader
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadSPP
+
+- type: randomHumanoidSettings
+  parent: RMCSPPLeader
+  id: RMCSPPLeaderFriendly
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-spp-friendly-leader
+    description: rmc-ghost-role-information-spp-friendly-description
+    rules: rmc-ghost-role-information-spp-rules
+    reregister: false
+    job: RMCSPPLeader
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadSPP
 
 - type: startingGear
   id: RMCGearSPPLeader
