--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
@@ -1,7 +1,7 @@
 ﻿- type: job
   parent: CMJobBase
   id: RMCSPPMedic
-  name: RMCSPPMedic
+  name: rmc-job-name-spp-medic
   description: rmc-job-description-spp-medic
   playTimeTracker: CMJobSPPMedic
   ranks:
@@ -32,9 +32,9 @@
 
 - type: entity
   parent: MarkerBase
-  id: RMCRandomHumanoidSPPMedic
+  id: RMCRandomHumanoidSPPMedicHostile
   name: spp ghost role medic
-  suffix: Spawner, Player
+  suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
     layers:
@@ -42,19 +42,47 @@
   - type: RandomHumanoidSpawner
     settings: RMCSPPMedic
 
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidSPPMedicFriendly
+  name: spp ghost role medic
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: RMCSPPMedicFriendly
+
 - type: randomHumanoidSettings
   parent: EventHumanoid
   id: RMCSPPMedic
   components:
   - type: GhostRole
-    name: RMCSPPMedic
-    description: rmc-job-description-spp-medic
+    name: rmc-ghost-name-spp-hostile-medic
+    description: rmc-ghost-role-information-spp-hostile-description
     rules: rmc-ghost-role-information-spp-rules
     reregister: false
     job: RMCSPPMedic
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadSPP
+
+- type: randomHumanoidSettings
+  parent: RMCSPPMedic
+  id: RMCSPPMedicFriendly
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-spp-friendly-medic
+    description: rmc-ghost-role-information-spp-friendly-description
+    rules: rmc-ghost-role-information-spp-rules
+    reregister: false
+    job: RMCSPPMedic
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadSPP
 
 - type: startingGear
   id: RMCGearSPPMedic
