--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
@@ -1,7 +1,7 @@
 ﻿- type: job
   parent: CMJobBase
   id: RMCSPPRifleman
-  name: RMCSPPRifleman
+  name: rmc-job-name-spp-rifleman
   description: rmc-job-description-spp-soldier
   playTimeTracker: CMJobSPPRifleman
   ranks:
@@ -27,9 +27,9 @@
 
 - type: entity
   parent: MarkerBase
-  id: RMCRandomHumanoidSPPRifleman
+  id: RMCRandomHumanoidSPPRiflemanHostile
   name: spp ghost role rifleman
-  suffix: Spawner, Player
+  suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
     layers:
@@ -37,19 +37,47 @@
   - type: RandomHumanoidSpawner
     settings: RMCSPPRifleman
 
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidSPPRiflemanFriendly
+  name: spp ghost role rifleman
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: RMCSPPRiflemanFriendly
+
 - type: randomHumanoidSettings
   parent: EventHumanoid
   id: RMCSPPRifleman
   components:
   - type: GhostRole
-    name: RMCSPPRifleman
-    description: rmc-job-description-spp-soldier
+    name: rmc-ghost-name-spp-hostile-rifleman
+    description: rmc-ghost-role-information-spp-hostile-description
     rules: rmc-ghost-role-information-spp-rules
     reregister: false
     job: RMCSPPRifleman
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadSPP
+
+- type: randomHumanoidSettings
+  parent: RMCSPPRifleman
+  id: RMCSPPRiflemanFriendly
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-spp-friendly-rifleman
+    description: rmc-ghost-role-information-spp-friendly-description
+    rules: rmc-ghost-role-information-spp-rules
+    reregister: false
+    job: RMCSPPRifleman
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadSPP
 
 - type: startingGear
   id: RMCGearSPPRifleman
