--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
@@ -1,7 +1,7 @@
 ﻿- type: job
   parent: CMJobBase
   id: RMCSPPEngineer
-  name: RMCSPPEngineer
+  name: rmc-job-name-spp-engineer
   description: rmc-job-description-spp-engineer
   playTimeTracker: CMJobSPPEngineer
   ranks:
@@ -33,9 +33,9 @@
 
 - type: entity
   parent: MarkerBase
-  id: RMCRandomHumanoidSPPEngineer
+  id: RMCRandomHumanoidSPPEngineerHostile
   name: spp ghost role engineer
-  suffix: Spawner, Player
+  suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
     layers:
@@ -43,19 +43,47 @@
   - type: RandomHumanoidSpawner
     settings: RMCSPPEngineer
 
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidSPPEngineerFriendly
+  name: spp ghost role engineer
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: RMCSPPEngineerFriendly
+
 - type: randomHumanoidSettings
   parent: EventHumanoid
   id: RMCSPPEngineer
   components:
   - type: GhostRole
-    name: RMCSPPEngineer
-    description: rmc-job-description-spp-engineer
+    name: rmc-ghost-name-spp-hostile-engineer
+    description: rmc-ghost-role-information-spp-hostile-description
     rules: rmc-ghost-role-information-spp-rules
     reregister: false
     job: RMCSPPEngineer
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadSPP
+
+- type: randomHumanoidSettings
+  parent: RMCSPPEngineer
+  id: RMCSPPEngineerFriendly
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-spp-friendly-engineer
+    description: rmc-ghost-role-information-spp-friendly-description
+    rules: rmc-ghost-role-information-spp-rules
+    reregister: false
+    job: RMCSPPEngineer
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadSPP
 
 - type: startingGear
   id: RMCGearSPPEngineer
