final SPP adjustments

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
@@ -38,8 +38,8 @@
   suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPEngineer
 
@@ -50,8 +50,8 @@
   suffix: Spawner, Player, Friendly
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPEngineerFriendly
 
