--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
@@ -37,8 +37,8 @@
   suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPMedic
 
@@ -49,8 +49,8 @@
   suffix: Spawner, Player, Friendly
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPMedicFriendly
 
