--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
@@ -26,26 +26,24 @@
   hidden: true
 
 - type: entity
-  parent: MarkerBase
   id: RMCRandomHumanoidSPPRiflemanHostile
   name: spp ghost role rifleman
   suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPRifleman
 
 - type: entity
-  parent: MarkerBase
   id: RMCRandomHumanoidSPPRiflemanFriendly
   name: spp ghost role rifleman
   suffix: Spawner, Player, Friendly
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPRiflemanFriendly
 
