--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/specialist.yml
@@ -35,26 +35,24 @@
   hidden: true
 
 - type: entity
-  parent: MarkerBase
   id: RMCRandomHumanoidSPPSpecialistHostile
   name: spp ghost role specialist
   suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPSpecialist
 
 - type: entity
-  parent: MarkerBase
   id: RMCRandomHumanoidSPPSpecialistFriendly
   name: spp ghost role specialist
   suffix: Spawner, Player, Friendly
   components:
   - type: Sprite
-    layers:
-    - state: red
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: spp_spawn
   - type: RandomHumanoidSpawner
     settings: RMCSPPSpecialistFriendly
 
