--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/leader.yml
@@ -40,6 +40,33 @@
         sprite: _RMC14/Interface/cm_job_icons.rsi
         state: pmc_ld
     - type: RMCPointing
+  hidden: true
+
+- type: entity
+  id: RMCRandomHumanoidPMCLeader
+  name: weya pmc ghost role leader
+  suffix: Spawner, Player
+  components:
+  - type: Sprite
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: pmc_spawn
+  - type: RandomHumanoidSpawner
+    settings: RMCPMCLeader
+
+- type: randomHumanoidSettings
+  parent: EventHumanoid
+  id: RMCPMCLeader
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-pmc-leader
+    description: rmc-ghost-role-information-pmc-description
+    rules: rmc-ghost-role-information-pmc-rules
+    reregister: false
+    job: RMCPMCLeader
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadPMC
 
 - type: startingGear
   id: RMCJobPMCLeader
@@ -79,7 +106,6 @@
     - CMMagazineRifleM54CAP
     - CMMagazineRifleM54CAP
 
-
 - type: playTimeTracker
   id: RMCJobPMCLeader
 
@@ -89,29 +115,3 @@
   icon:
     sprite: _RMC14/Interface/cm_job_icons.rsi
     state: pmc_ld
-
-- type: entity
-  parent: MarkerBase
-  id: RMCRandomHumanoidPMCLeader
-  name: weya pmc ghost role leader
-  suffix: Spawner, Player
-  components:
-  - type: Sprite
-    layers:
-    - state: red
-  - type: RandomHumanoidSpawner
-    settings: RMCPMCLeader
-
-- type: randomHumanoidSettings
-  parent: EventHumanoid
-  id: RMCPMCLeader
-  components:
-  - type: GhostRole
-    name: rmc-ghost-name-pmc-leader
-    description: rmc-ghost-role-information-pmc-description
-    rules: ghost-role-information-nonantagonist-rules
-    reregister: false
-    job: RMCPMCLeader
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
