--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
@@ -32,6 +32,33 @@
         RMCSkillCqc: 1
         RMCSkillPowerLoader: 2
     - type: SquadArmorWearer
+  hidden: true
+
+- type: entity
+  id: RMCRandomHumanoidPMCEngineer
+  name: weya pmc ghost role engineer
+  suffix: Spawner, Player
+  components:
+  - type: Sprite
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: pmc_spawn
+  - type: RandomHumanoidSpawner
+    settings: RMCPMCEngineer
+
+- type: randomHumanoidSettings
+  parent: EventHumanoid
+  id: RMCPMCEngineer
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-pmc-engineer
+    description: rmc-ghost-role-information-pmc-description
+    rules: rmc-ghost-role-information-pmc-rules
+    reregister: false
+    job: RMCPMCEngineer
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadPMC
 
 - type: startingGear
   id: RMCJobPMCEngineer
@@ -83,29 +110,3 @@
   icon:
     sprite: _RMC14/Interface/cm_job_icons.rsi
     state: pmc_ct
-
-- type: entity
-  parent: MarkerBase
-  id: RMCRandomHumanoidPMCEngineer
-  name: weya pmc ghost role engineer
-  suffix: Spawner, Player
-  components:
-  - type: Sprite
-    layers:
-    - state: red
-  - type: RandomHumanoidSpawner
-    settings: RMCPMCEngineer
-
-- type: randomHumanoidSettings
-  parent: EventHumanoid
-  id: RMCPMCEngineer
-  components:
-  - type: GhostRole
-    name: rmc-ghost-name-pmc-engineer
-    description: rmc-ghost-role-information-pmc-description
-    rules: ghost-role-information-nonantagonist-rules
-    reregister: false
-    job: RMCPMCEngineer
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
