--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/gunner.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/gunner.yml
@@ -31,9 +31,34 @@
         RMCSkillEndurance: 3
         RMCSkillJtac: 1
     - type: SquadArmorWearer
+  hidden: true
 
-- type: playTimeTracker
-  id: RMCJobPMCGunner
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidPMCGunner
+  name: weya pmc ghost role gunner
+  suffix: Spawner, Player
+  components:
+  - type: Sprite
+    sprite: _RMC14/Markers/landmarks.rsi
+    state: pmc_spawn
+  - type: RandomHumanoidSpawner
+    settings: RMCPMCGunner
+
+- type: randomHumanoidSettings
+  parent: EventHumanoid
+  id: RMCPMCGunner
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-pmc-gunner
+    description: rmc-ghost-role-information-pmc-description
+    rules: rmc-ghost-role-information-pmc-rules
+    reregister: false
+    job: RMCPMCGunner
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+    squad: SquadPMC
 
 - type: startingGear
   id: RMCJobPMCGunner
@@ -61,35 +86,12 @@
     - CMGauze10
     - CMGauze10
 
+- type: playTimeTracker
+  id: RMCJobPMCGunner
+
 - type: jobIcon
   parent: CMJobIconBase
   id: RMCJobIconPMCGunner
   icon:
     sprite: _RMC14/Interface/cm_job_icons.rsi
     state: pmc_sg
-
-- type: entity
-  parent: MarkerBase
-  id: RMCRandomHumanoidPMCGunner
-  name: weya pmc ghost role gunner
-  suffix: Spawner, Player
-  components:
-  - type: Sprite
-    layers:
-    - state: red
-  - type: RandomHumanoidSpawner
-    settings: RMCPMCGunner
-
-- type: randomHumanoidSettings
-  parent: EventHumanoid
-  id: RMCPMCGunner
-  components:
-  - type: GhostRole
-    name: rmc-ghost-name-pmc-gunner
-    description: rmc-ghost-role-information-pmc-description
-    rules: ghost-role-information-nonantagonist-rules
-    reregister: false
-    job: RMCPMCGunner
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
