--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/gunner.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/gunner.yml
@@ -81,7 +81,7 @@
     settings: RMCPMCGunner
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCPMCGunner
   components:
   - type: GhostRole
