--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/medic.yml
@@ -91,7 +91,7 @@
     settings: RMCPMCMedic
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCPMCMedic
   components:
   - type: GhostRole
