--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/pizza.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/pizza.yml
@@ -34,7 +34,7 @@
     settings: RMCPizzaDeliveryBoy
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCPizzaDeliveryBoy
   components:
   - type: RMCJobSpawner
