--- a/Resources/Prototypes/_RMC14/Roles/Jobs/rmc_base_humanoid.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/rmc_base_humanoid.yml
@@ -1,5 +1,5 @@
 ﻿- type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCSettingsGhostRole
   components:
   - type: GhostRole
