--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
@@ -43,7 +43,7 @@
     settings: RMCSPPMedic
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCSPPMedic
   components:
   - type: GhostRole
