--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
@@ -174,7 +174,4 @@
 - type: entity
   parent: CMIDCardBase
   id: RMCIDCardFreelancer
-  name: ID card
-  components:
-  - type: IdCard
-    jobTitle: rmc-job-title-freelancer
+  name: freelancer ID card
