ok final freelancers changes i swear

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
@@ -76,6 +76,7 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadFreelancer
 
 - type: randomHumanoidSettings
   parent: EventHumanoid
@@ -90,6 +91,7 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadFreelancer
 
 - type: startingGear
   id: RMCGearFreelancerLeader
