--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/medic.yml
@@ -65,6 +65,7 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadFreelancer
 
 - type: randomHumanoidSettings
   parent: EventHumanoid
@@ -79,6 +80,7 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadFreelancer
 
 - type: startingGear
   id: RMCGearFreelancerMedic
