--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/standard.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/standard.yml
@@ -63,6 +63,7 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadFreelancer
 
 - type: randomHumanoidSettings
   parent: EventHumanoid
@@ -77,6 +78,7 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+    squad: SquadFreelancer
 
 - type: startingGear
   id: RMCGearFreelancerStandard
