hefa and freelancer icons

--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_hefa.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_hefa.yml
@@ -4,4 +4,11 @@
   name: HEFA ID card
   components:
   - type: PresetIdCard
-    job: CMHEFAShrapnelsworn
+    job: RMCHEFAShrapnelsworn
+
+- type: entity
+  parent: RMCIDCardHEFAShrapnelsworn
+  id: RMCIDCardHEFAShrapnelswornMelee
+  components:
+  - type: PresetIdCard
+    job: RMCHEFAShrapnelswornMelee
