--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
@@ -47,8 +47,8 @@
   suffix: Spawner, Player, Hostile
   components:
   - type: Sprite
-    sprite: _RMC14/Markers/landmarks.rsi
-    state: pmc_spawn
+    sprite: _RMC14/Objects/Clothing/Head/Hats/beret_freelancer.rsi
+    state: icon
   - type: RandomHumanoidSpawner
     settings: RMCFreelancerLeader
 
@@ -58,8 +58,8 @@
   suffix: Spawner, Player, Friendly
   components:
   - type: Sprite
-    sprite: _RMC14/Markers/landmarks.rsi
-    state: pmc_spawn
+    sprite: _RMC14/Objects/Clothing/Head/Hats/beret_freelancer.rsi
+    state: icon
   - type: RandomHumanoidSpawner
     settings: RMCFreelancerLeaderFriendly
 
