--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/engineering.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/engineering.yml
@@ -79,33 +79,40 @@
     sections:
     - name: Circuitboards
       entries:
-#     - id: FireAlarmElectronics
+#     - id: RMCFireAlarmCircuitboard
 #       amount: 5
       - id: CMAPCElectronics
         amount: 6
       - id: CMAutolatheMachineCircuitboard
         amount: 2
-#     - id: TelecomServerCircuitboard
+#     - id: RMCTelecomServerCircuitboard
 #       amount: 1
-#     - id: CrewMonitoringComputerCircuitboard
+#     - id: RMCCrewMonitoringCircuitboard
 #       amount: 2
-#     - id: IDComputerCircuitboard
+#     - id: RMCIDComputerConsoleCircuitboard
 #       amount: 2
-#     - id: StationRecordsComputerCircuitboard
+#     - id: RMCSecurityRecordsCircuitboard
 #       amount: 2
-#     - id: Supply ordering console
-#     - id: Reserach data terminal
-#     - id: CMPortableGeneratorPacmanMachineCircuitBoard
-#       amount: 5
+#     - id: RMCSupplyOrderingCircuitboard
+#       amount: 2
+#     - id: RMCReserachDataTerminalCircuitboard
+#       amount: 2
+#     - id: RMCPacmanGeneratorCircuitboard
+#       amount: 1
       - id: CMSMESMachineCircuitboard
         amount: 2
-#     - id: Air alarm
-#     - id: security camera monitor
+#     - id: RMCAirAlarmCircuitboard
+#       amount: 2
+#     - id: RMCSecurityCameraMonitorCircuitboard
+#       amount: 2
       - id: RMCCircuitboardTelevision
         amount: 4
-#     - id: station alerts
-#     - id: arcade
-#     - id: atmospheric monitor
+#     - id: RMCStationAlertsConsoleCircuitboard
+#       amount: 2
+#     - id: RMCArcadeCircuitboard
+#       amount: 2
+#     - id: RMCAtmosphericConsoleCircuitboard
+#       amount: 2
 
 
 # Electronics
