--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -263,7 +263,11 @@
     CMJumpsuitMP: 2
     CMHeadBeretRed: 6
     CMGlassesSecurity: 3
-    CMHeadset: 6
+    # CMHeadset: 6
+    RMCScrubsPrisonMedsec: 4
+    RMCScrubsPrisonMaxsec : 2
+    ClothingHeadsetPrison : 6
+    ClothingShoesPrison : 6
 
 - type: entity
   parent: CMVendor
