Fix We-Ya PMCs not having unique suffixes in the spawan menu

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/larva.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/larva.yml
@@ -31,8 +31,9 @@
     hudOffset: -0.1,0.25
     tier: 0
     unlockAt: 0
-    healOffWeeds: true
     emoteSounds: Larva
+  - type: XenoRegen
+    healOffWeeds: true
   - type: XenoLight
   - type: XenoPlasma
     plasma: 10
