--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
@@ -37,7 +37,7 @@
   parent: MarkerBase
   id: RMCRandomHumanoidPMCStandardM63B2
   name: weya pmc ghost role standard m63b2
-  suffix: Spawner, Player
+  suffix: We-Ya PMC
   components:
   - type: Sprite
     layers:
@@ -108,7 +108,7 @@
   parent: MarkerBase
   id: RMCRandomHumanoidPMCStandardSSG45
   name: weya pmc ghost role standard ssg45
-  suffix: Spawner, Player
+  suffix: We-Ya PMC
   components:
   - type: Sprite
     layers:
@@ -177,7 +177,7 @@
   parent: MarkerBase
   id: RMCRandomHumanoidPMCStandardM54C2
   name: weya pmc ghost role standard m54c2
-  suffix: Spawner, Player
+  suffix: We-Ya PMC
   components:
   - type: Sprite
     layers:
