--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/medic.yml
@@ -82,7 +82,7 @@
   parent: MarkerBase
   id: RMCRandomHumanoidPMCMedic
   name: weya pmc ghost role medic
-  suffix: Spawner, Player
+  suffix: We-Ya PMC
   components:
   - type: Sprite
     layers:
