Fix WeYa PMCs not having weya iff

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
@@ -58,6 +58,9 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+  - type: NpcFactionMember
+    factions:
+    - WeYa
 
 - type: startingGear
   id: RMCJobPMCStandardM63B2
@@ -129,6 +132,9 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+  - type: NpcFactionMember
+    factions:
+    - WeYa
 
 - type: startingGear
   id: RMCJobPMCStandardSSG45
@@ -198,6 +204,9 @@
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
+  - type: NpcFactionMember
+    factions:
+    - WeYa
 
 - type: startingGear
   id: RMCJobPMCStandardM54C2
