--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
@@ -77,7 +77,7 @@
   - type: XenoFriendly
   - type: Damageable
     damageContainer: StructuralXeno
-    damageModifierSet: Weed
+    damageModifierSet: null # TODO RMC14 weed resists once explosion resist and health is accounted for
   - type: Destructible
     thresholds:
     - trigger:
@@ -127,7 +127,7 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 33
+        damage: 33 # TODO RMC14 11
       behaviors:
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
@@ -245,7 +245,7 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 33
+        damage: 33 # TODO RMC14 30
       behaviors:
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
