Fix yaml errors

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -38,6 +38,7 @@
     tier: 3
     hudOffset: 0,0.1
     unlockAt: 900 # 15 minutes
+  - type: XenoRegen
     standHealingMultiplier: 0.66
   - type: XenoHeavy
   - type: XenoDevolve
