--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/runner.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/runner.yml
@@ -27,6 +27,7 @@
     tier: 1
     hudOffset: -0.15,0.6
     unlockAt: 300 # 5 minutes
+  - type: XenoRegen
     restHealMultiplier:  1.75
   - type: Fixtures
     fixtures:
