--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/warrior.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/warrior.yml
@@ -38,6 +38,7 @@
     tier: 2
     hudOffset: -0.15,0.25
     unlockAt: 540 # 9 minutes
+  - type: XenoRegen
     restHealMultiplier:  1.4
   - type: XenoLight
   - type: XenoDevolve
