--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon.yml
@@ -74,7 +74,7 @@
     settings: RMCWeYaGoon
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCWeYaGoon
   components:
   - type: GhostRole
