--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/lawyer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/lawyer.yml
@@ -59,7 +59,7 @@
     settings: RMCWeYaLawyer
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCWeYaLawyer
   components:
   - type: GhostRole
