--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/lawyer_supervisor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/lawyer_supervisor.yml
@@ -62,7 +62,7 @@
     settings: RMCWeYaLawyerSupervisor
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCWeYaLawyerSupervisor
   components:
   - type: GhostRole
