--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon_leader.yml
@@ -79,7 +79,7 @@
     settings: RMCWeYaGoonLead
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCWeYaGoonLead
   components:
   - type: GhostRole
