account for ExplosionRandomResistance by multiplying the randomness by 3, from .02-0.1 to .06-0.1

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
@@ -94,6 +94,8 @@
       Brute:
         collection: XenoResinBreak
   - type: ExplosionRandomResistance
+    min: 0.06
+    max: 0.3
   - type: DeletedByWeedKiller
   - type: RMCDeleteAnchoredOnInit
     enabled: false
