--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/bureau.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/bureau.yml
@@ -1,43 +1,23 @@
-# Marshal
-
-- type: entity
-  parent: MarkerBase
-  id: RMCSpawnerBureauMarshal
-  name: bureau marshal spawner
-  suffix: Spawner
-  components:
-    - type: Sprite
-      layers:
-      - state: red
-      - sprite: _RMC14/Objects/Clothing/Head/Hats/bureau_cap.rsi
-        state: icon
-    - type: ConditionalSpawner
-      prototypes:
-      - RMCRandomHumanoidBureauMarshal
-
-- type: entity
-  id: RMCRandomHumanoidBureauMarshal
-  name: bureau marshal ghost role
-  suffix: Role
-  components:
-    - type: Sprite
-      sprite: _RMC14/Objects/Clothing/Head/Hats/bureau_cap.rsi
-      state: icon
-    - type: RandomHumanoidSpawner
-      settings: RMCBureauMarshal
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
+# Bureau Marshal
+- type: job
+  parent: CMJobBase
   id: RMCBureauMarshal
-  components:
-    - type: GhostRole
-      name: rmc-ghost-role-information-bureau-marshal-name
-      description: rmc-ghost-role-information-bureau-marshal-description
-      rules: ghost-role-information-nonantagonist-rules
-      raffle:
-        settings: short
-    - type: Loadout
-      prototypes: [ RMCGearBureauMarshal ]
+  name: rmc-job-name-bureau-marshal
+  description: rmc-ghost-role-information-bureau-marshal-description
+  playTimeTracker: RMCJobBureauMarshal
+  ranks:
+    RMCRankCMBMarshal: []
+  startingGear: RMCGearBureauMarshal
+  icon: "RMCJobIconBureauMarshal"
+  joinNotifyCrew: false
+  accessGroups:
+  - Colonist
+  special:
+  - !type:AddComponentSpecial
+    components:
+    - type: NpcFactionMember
+      factions:
+      - Bureau
     - type: Skills
       skills:
         RMCSkillPolice: 2
@@ -52,8 +32,35 @@
         RMCSkillVehicles: 1
         RMCSkillEndurance: 3
         RMCSkillJtac: 3
+    - type: SquadArmorWearer
     - type: RMCPointing
     - type: MarineOrders
+  hidden: true
+
+- type: entity
+  id: RMCRandomHumanoidBureauMarshal
+  name: bureau ghost role marshal
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/OuterClothing/Coats/Bureau/marshal.rsi
+    state: icon
+  - type: RandomHumanoidSpawner
+    settings: RMCBureauMarshal
+
+- type: randomHumanoidSettings
+  parent: RMCEventHumanoid
+  id: RMCBureauMarshal
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-bureau-marshal
+    description: rmc-ghost-role-information-bureau-marshal-description
+    rules: rmc-ghost-role-information-bureau-rules
+    reregister: false
+    job: RMCBureauMarshal
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
 
 - type: startingGear
   id: RMCGearBureauMarshal
@@ -73,46 +80,26 @@
     pocket1: RMCPouchFirstAidERT
     pocket2: RMCPouchShotgun
 
-# Deputy
-
-- type: entity
-  parent: MarkerBase
-  id: RMCSpawnerBureauDeputy
-  name: bureau deputy spawner
-  suffix: Spawner
-  components:
-    - type: Sprite
-      layers:
-      - state: red
-      - sprite: _RMC14/Objects/Clothing/Head/Hats/bureau_cap.rsi
-        state: icon
-    - type: ConditionalSpawner
-      prototypes:
-      - RMCRandomHumanoidBureauDeputy
-
-- type: entity
-  id: RMCRandomHumanoidBureauDeputy
-  name: bureau deputy ghost role
-  suffix: Role
-  components:
-    - type: Sprite
-      sprite: _RMC14/Objects/Clothing/Head/Hats/bureau_cap.rsi
-      state: icon
-    - type: RandomHumanoidSpawner
-      settings: RMCBureauDeputy
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
+# Bureau Deputy
+- type: job
+  parent: CMJobBase
   id: RMCBureauDeputy
-  components:
-    - type: GhostRole
-      name: rmc-ghost-role-information-bureau-deputy-name
-      description: rmc-ghost-role-information-bureau-marshal-description
-      rules: ghost-role-information-nonantagonist-rules
-      raffle:
-        settings: short
-    - type: Loadout
-      prototypes: [ RMCGearBureauDeputy ]
+  name: rmc-job-name-bureau-deputy
+  description: rmc-ghost-role-information-bureau-marshal-description
+  playTimeTracker: RMCJobBureauDeputy
+  ranks:
+    RMCRankCMBDeputy: []
+  startingGear: RMCGearBureauDeputy
+  icon: "RMCJobIconBureauDeputy"
+  joinNotifyCrew: false
+  accessGroups:
+  - Colonist
+  special:
+  - !type:AddComponentSpecial
+    components:
+    - type: NpcFactionMember
+      factions:
+      - Bureau
     - type: Skills
       skills:
         RMCSkillPolice: 2
@@ -125,6 +112,33 @@
         RMCSkillEngineer: 2
         RMCSkillJtac: 1
         RMCSkillEndurance: 3
+    - type: SquadArmorWearer
+  hidden: true
+
+- type: entity
+  id: RMCRandomHumanoidBureauDeputy
+  name: bureau ghost role deputy
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/OuterClothing/Coats/Bureau/marshal.rsi
+    state: icon
+  - type: RandomHumanoidSpawner
+    settings: RMCBureauDeputy
+
+- type: randomHumanoidSettings
+  parent: RMCEventHumanoid
+  id: RMCBureauDeputy
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-bureau-deputy
+    description: rmc-ghost-role-information-bureau-marshal-description
+    rules: rmc-ghost-role-information-bureau-rules
+    reregister: false
+    job: RMCBureauDeputy
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
 
 - type: startingGear
   id: RMCGearBureauDeputy
@@ -143,3 +157,103 @@
     ears: CMHeadsetMPO
     pocket1: RMCPouchFirstAidERT
     pocket2: RMCPouchShotgun
+
+# Bureau Observer
+- type: job
+  parent: CMJobBase
+  id: RMCBureauObserver
+  name: rmc-job-name-bureau-observer
+  description: rmc-ghost-role-information-bureau-observer-description
+  playTimeTracker: RMCJobBureauObserver
+  ranks:
+    RMCRankIHROObserver: []
+  startingGear: RMCGearBureauObserver
+  icon: "RMCJobIconBureauObserver"
+  joinNotifyCrew: false
+  accessGroups:
+  - Colonist
+  special:
+  - !type:AddComponentSpecial
+    components:
+    - type: NpcFactionMember
+      factions:
+      - Bureau
+    - type: Skills
+      skills:
+        RMCSkillFireman: 1
+        RMCSkillMedical: 3
+        RMCSkillSurgery: 2
+    - type: SquadArmorWearer
+  hidden: true
+
+- type: entity
+  id: RMCRandomHumanoidBureauObserver
+  name: bureau ghost role interstellar sapient-life rights observer
+  suffix: Spawner, Player, Friendly
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/OuterClothing/Coats/Bureau/marshal.rsi
+    state: icon
+  - type: RandomHumanoidSpawner
+    settings: RMCBureauObserver
+
+- type: randomHumanoidSettings
+  parent: RMCEventHumanoid
+  id: RMCBureauObserver
+  components:
+  - type: GhostRole
+    name: rmc-ghost-name-bureau-observer
+    description: rmc-ghost-role-information-bureau-observer-description
+    rules: rmc-ghost-role-information-bureau-rules
+    reregister: false
+    job: RMCBureauObserver
+    raffle:
+      settings: short
+  - type: GhostRoleApplySpecial
+
+- type: startingGear
+  id: RMCGearBureauObserver
+  equipment:
+    eyes: RMCGlassesMedicalHUDGlasses # TODO RMC14 sensormate hud
+    mask: CMMaskSterile
+    back: RMCSatchelBureauObserverFill
+    gloves: CMHandsInsulated
+    jumpsuit: CMJumpsuitLiaisonBlue
+    outerClothing: RMCArmorVest
+    belt: CMBeltMedicBagFilled
+    shoes: CMBootsBlackFilled
+    id: RMCIDCardBureauObserver
+    ears: RMCHeadsetDistressBureau
+    ears2: RMCFlashlightPen
+    pocket1: RMCPouchAutoinjectorFill
+    pocket2: RMCPouchGeneralLargeBureauObserverFill
+    suitstorage: RMCFlashlight
+  inhand: # TOOD RMC14 camera
+  - CMHealthAnalyzer
+
+- type: playTimeTracker
+  id: RMCJobBureauMarshal
+
+- type: playTimeTracker
+  id: RMCJobBureauDeputy
+
+- type: jobIcon
+  parent: CMJobIconBase
+  id: RMCJobIconBureauMarshal
+  icon:
+    sprite: _RMC14/Interface/cm_job_icons.rsi
+    state: cmb_mar
+
+- type: jobIcon
+  parent: CMJobIconBase
+  id: RMCJobIconBureauDeputy
+  icon:
+    sprite: _RMC14/Interface/cm_job_icons.rsi
+    state: cmb_dep
+
+- type: jobIcon
+  parent: CMJobIconBase
+  id: RMCJobIconBureauObserver
+  icon:
+    sprite: _RMC14/Interface/cm_job_icons.rsi
+    state: cmb_obs
